# scripts

dataset/: caltech_motorbike_extract.m  get_gallaher_person_dataset.sh  images_size_info.m
dataset/resources/: GallagherDataset.txt
opencv/: install_opencv_ubuntu_1010.sh  install_opencv_ubuntu_910.sh
opencv/cpp/: CMakeLists.txt  extract_bb_from_segmentation.cpp  imrandom.cpp
